Fix USELESS scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -175,6 +175,6 @@ svg {
 }
 
 .svg-container {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     width: 100%;
 }
